--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-02-06  Colin Walters  <walters@debian.org>
+
+	* ext/gnomevfs/gstgnomevfssrc.c (gst_gnomevfssrc_open_file): Don't
+	assume the pad always has caps; instead create a new one and set
+	its properties.
+
 2003-02-03  Colin Walters  <walters@verbum.org>
 
 	* ext/gnomevfs/gstgnomevfssrc.c: 
