--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+
+=== gst-plugins 0.7.4 ===
+
+2004-02-06  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+        * NEWS: GStreamer Plugins 0.7.4 "For Great Justice" released
+	* configure.ac: changed for release
+
 2004-02-04  David Schleef  <ds@schleef.org>
 
 	* gst/wavparse/gstwavparse.c: (gst_wavparse_parse_fmt): Fix a caps
