--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-18  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* configure.ac: branch and prerelease
+
 2004-06-17  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/tcp/gsttcpclientsrc.c: (gst_tcpclientsrc_init),
