--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-18  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/multipart/Makefile.am:
+	* gst/videomixer/Makefile.am:
+          fix naming
+
 2004-06-18  Wim Taymans  <wim@fluendo.com>
 
 	* ext/sidplay/gstsiddec.cc:
