--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-06-23  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* gst/audiorate/gstaudiorate.c: (gst_audiorate_class_init),
+	(gst_audiorate_link), (gst_audiorate_init), (gst_audiorate_chain),
+	(gst_audiorate_set_property), (gst_audiorate_get_property):
+	  get bytes_per_sample from caps
+	  drop overlapping samples
+
+2004-06-23  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* ext/alsa/gstalsasrc.c: (gst_alsa_src_loop):
 	  set offset and offset_end
 
