--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+=== release 0.8.2 ===
+
 2004-06-23  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/audiorate/gstaudiorate.c: (gst_audiorate_class_init),
@@ -516,6 +518,7 @@
 	(gst_tcpserversrc_get_property):
 	uniformized, change default protocol to NONE
 	* gst/tcp/gsttcp-marshal.list: added
+
 2004-06-07  Benjamin Otte  <otte@gnome.org>
 
 	* ext/alsa/gstalsasink.c: (gst_alsa_sink_check_event):
@@ -568,7 +571,7 @@
 	* gst/mixmatrix/mixmatrix.c: (gst_mixmatrix_init),
 	(mixmatrix_resize), (gst_mixmatrix_set_all_caps),
 	(gst_mixmatrix_request_new_pad), (gst_mixmatrix_loop):
-	  don't use // coments
+	  don't use // comments
 
 2004-06-07  Benjamin Otte  <otte@gnome.org>
 
@@ -1217,9 +1220,9 @@
 
 2004-05-18  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>
 
-	* m4/a52.m4 : fix compilation with -Wall -Werror
-	* m4/libfame.m4 : idem
-	* m4/libmikmod.m4 : idem
+	* m4/a52.m4: fix compilation with -Wall -Werror
+	* m4/libfame.m4: idem
+	* m4/libmikmod.m4: idem
 
 2004-05-17  Benjamin Otte  <otte@gnome.org>
 
@@ -1376,26 +1379,28 @@
 
 2004-05-14  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>
 
-	* gst-libs/gst/riff/riff-read.c :
+	* gst-libs/gst/riff/riff-read.c:
 	  - fix INFO tag extraction in RIFF/AVI files
             because gst_event_unref (event) also freed taglist
           - avoid a mem leak
 
 2004-05-13  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>
 
-	* ext/mad/gstid3tag.c : move from "Codec/(Dem/M)uxer" to "Codec/(Dem/M)uxer/Audio"
-	* gst/wavenc/gstwavenc.c : move from "Codec/Encoder/Audio" to "Codec/Muxer/Audio"
+	* ext/mad/gstid3tag.c:
+	  move from "Codec/(Dem/M)uxer" to "Codec/(Dem/M)uxer/Audio"
+	* gst/wavenc/gstwavenc.c:
+	  move from "Codec/Encoder/Audio" to "Codec/Muxer/Audio"
 
-	* gst/auparse/gstauparse.c :
+	* gst/auparse/gstauparse.c:
 	  - add code (commented for now) to support audio/x-adpcm on src pad
 	    (we have no decoder for those layout yet)
 
-	* gst/cdxaparse/gstcdxaparse.c :
-	* gst/cdxaparse/gstcdxaparse.h :
+	* gst/cdxaparse/gstcdxaparse.c:
+	* gst/cdxaparse/gstcdxaparse.h:
 	  - partial rewrite using RiffRead (ripped iain's wavparse code)
 
-	* gst/rtp/gstrtpL16enc.c : typo
-	* gst/rtp/gstrtpgsmenc.c : typo
+	* gst/rtp/gstrtpL16enc.c: typo
+	* gst/rtp/gstrtpgsmenc.c: typo
 
 2004-05-13  Benjamin Otte  <otte@gnome.org>
 
@@ -2091,7 +2096,7 @@
 	* gst/videotestsrc/gstvideotestsrc.h:
           add num-buffers property
 
-	2004-04-26  Benjamin Otte  <otte@gnome.org>
+2004-04-26  Benjamin Otte  <otte@gnome.org>
 
 	* ext/mad/gstid3tag.c: (plugin_init):
 	  set id3mux rank to NONE so it doesn't confuse spider
