--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,33 @@
+2005-01-04  Wim Taymans  <wim@fluendo.com>
+
+	* examples/seeking/seek.c: (dynamic_link), (make_vorbis_pipeline),
+	(make_theora_pipeline), (do_seek), (start_seek), (stop_seek):
+	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_get_type),
+	(gst_ogg_pad_init), (gst_ogg_pad_src_query), (gst_ogg_pad_event),
+	(gst_ogg_demux_factory_filter), (compare_ranks),
+	(gst_ogg_pad_internal_chain), (gst_ogg_pad_typefind),
+	(gst_ogg_pad_submit_packet), (gst_ogg_pad_submit_page),
+	(gst_ogg_chain_new), (gst_ogg_chain_free),
+	(gst_ogg_chain_new_stream), (gst_ogg_chain_get_stream),
+	(gst_ogg_chain_has_stream), (gst_ogg_demux_base_init),
+	(gst_ogg_demux_init), (gst_ogg_demux_submit_buffer),
+	(gst_ogg_demux_seek), (gst_ogg_demux_get_data),
+	(gst_ogg_demux_get_next_page), (gst_ogg_demux_get_prev_page),
+	(gst_ogg_demux_perform_seek),
+	(gst_ogg_demux_bisect_forward_serialno),
+	(gst_ogg_demux_read_chain), (gst_ogg_demux_read_end_chain),
+	(gst_ogg_demux_find_pad), (gst_ogg_demux_find_chains),
+	(gst_ogg_demux_chain_unlocked), (gst_ogg_demux_chain),
+	(gst_ogg_demux_loop), (gst_ogg_demux_sink_activate),
+	(gst_ogg_print):
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_sink_link),
+	(gst_xvimagesink_event), (gst_xvimagesink_show_frame),
+	(gst_xvimagesink_finish_preroll), (gst_xvimagesink_chain),
+	(gst_xvimagesink_buffer_alloc):
+	* sys/xvimage/xvimagesink.h:
+	Implement flushing.
+	Improved seeking in ogg.
+
 2004-12-31  Wim Taymans  <wim@fluendo.com>
 
 	* examples/seeking/seek.c: (dynamic_link), (make_vorbis_pipeline),
