--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,42 @@
+2005-01-06  Wim Taymans  <wim@fluendo.com>
+
+	* examples/negotiation/queue.c: (message_received), (block_done),
+	(do_block), (do_renegotiate), (main):
+	* examples/seeking/seek.c: (dynamic_link), (make_vorbis_pipeline),
+	(make_theora_pipeline), (do_seek), (start_seek), (stop_seek):
+	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_get_type),
+	(gst_ogg_pad_init), (gst_ogg_pad_src_query), (gst_ogg_pad_event),
+	(gst_ogg_demux_factory_filter), (compare_ranks),
+	(gst_ogg_pad_internal_chain), (gst_ogg_pad_typefind),
+	(gst_ogg_pad_submit_packet), (gst_ogg_pad_submit_page),
+	(gst_ogg_chain_new), (gst_ogg_chain_free),
+	(gst_ogg_chain_new_stream), (gst_ogg_chain_get_stream),
+	(gst_ogg_chain_has_stream), (gst_ogg_demux_base_init),
+	(gst_ogg_demux_init), (gst_ogg_demux_submit_buffer),
+	(gst_ogg_demux_seek), (gst_ogg_demux_get_data),
+	(gst_ogg_demux_get_next_page), (gst_ogg_demux_get_prev_page),
+	(gst_ogg_demux_perform_seek),
+	(gst_ogg_demux_bisect_forward_serialno),
+	(gst_ogg_demux_read_chain), (gst_ogg_demux_read_end_chain),
+	(gst_ogg_demux_find_pad), (gst_ogg_demux_find_chains),
+	(gst_ogg_demux_chain_unlocked), (gst_ogg_demux_chain),
+	(gst_ogg_demux_loop), (gst_ogg_demux_sink_activate),
+	(gst_ogg_print):
+	* gst/videotestsrc/gstvideotestsrc.c:
+	(gst_videotestsrc_src_negotiate), (gst_videotestsrc_src_link),
+	(gst_videotestsrc_parse_caps), (gst_videotestsrc_src_accept_caps),
+	(gst_videotestsrc_setcaps), (gst_videotestsrc_activate),
+	(gst_videotestsrc_init), (gst_videotestsrc_loop):
+	* sys/oss/gstosssrc.c: (gst_osssrc_src_link),
+	(gst_osssrc_negotiate), (gst_osssrc_loop):
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_sink_link),
+	(gst_xvimagesink_change_state), (gst_xvimagesink_event),
+	(gst_xvimagesink_show_frame), (gst_xvimagesink_finish_preroll),
+	(gst_xvimagesink_chain), (gst_xvimagesink_buffer_alloc):
+	Ogg fixes.
+	xvimagesink clock unscheduling for faster state changes.
+	Small updates for plugins that use GstTask.
+
 2005-01-04  Wim Taymans  <wim@fluendo.com>
 
 	* examples/seeking/seek.c: (dynamic_link), (make_vorbis_pipeline),
